[package]
name = "test_api"
version = "0.1.0"
authors = ["Muhammad Hamza Farooq <mhamza2021999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_cors = "0.5.2"
serde = "1.0.114"
serde_derive = "1.0.114"
reqwest = "0.10.7"
lazy_static = "1.4.0"

serde_json = "1.0.57"
dotenv = "0.15.0"


[dependencies.rocket_contrib]
version="0.4.5"
default-features = false
features = ["tera_templates", "json"]
