[package]
name = "Rust_Request_Api"
version = "0.1.0"
authors = ["Muhammad Hamza Farooq <mhamza2021999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3.24"
rocket = "0.4.7"
reqwest=   "0.9.22"