[package]
name = "hyper_server_rust"
version = "0.1.0"
authors = ["Muhammad Hamza Farooq <mhamza2021999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
tokio = { version = "0.2", features = ["full"] }