[package]
name = "rocket_mongo_todo-master"
version = "0.1.0"
authors = ["MuhammadHamzaFarooq <mhamza2021999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4.5" 
serde = "^1.0" 
serde_derive = "^1.0" 
serde_json = "^1.0" 
rocket_cors = "^0.5.0" 

[dependencies.rocket_contrib]
version = "0.4.2" 
default-features = false 
features = ["tera_templates", "json"] 

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["sync"]
