[package]
name = "rust-mongodb-CRUD-API-master"
version = "0.1.0"
authors = ["MuhammadHamzaFarooq <mhamza2021999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.2"
bson = "0.14.1"
serde_json = "1.0.51"